src/assets/styles/styles.css
/* ... */
/* Roboto Black */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 900;
  font-display: swap;
  /*src: local('Roboto Black'),
    local('Roboto-Black'),
    url('../fonts/Roboto-Black-webfont.eot');*/
  src: /*url('../fonts/Roboto-Black-webfont.eot?#iefix') format('embedded-opentype'),*/
    url('../fonts/Roboto-Black-webfont.woff') format('woff'),
    url('../fonts/Roboto-Black-webfont.ttf') format('truetype');
}

/* Roboto Black Italic */
@font-face {
  font-family: 'Roboto';
  font-style: italic;
  font-weight: 900;
  font-display: swap;
  src: local('Roboto Black Italic'),
    local('Roboto-BlackItalic'),
    url('../fonts/Roboto-BlackItalic-webfont.eot');
  src: url('../fonts/Roboto-BlackItalic-webfont.eot?#iefix') format('embedded-opentype'),
    url('../fonts/Roboto-BlackItalic-webfont.woff') format('woff'),
    url('../fonts/Roboto-BlackItalic-webfont.ttf') format('truetype');
}

/* Globals */

* {
  font-family: 'Roboto', sans-serif;
}

body {
  background: url('../media/img/bg.png') repeat top left/auto;
  background-image: url('../media/img/bg.png');
  background-color: black;
}

hr {
  border-top: 1px dotted hsl(0, 0%, 60%);
  margin-left: .1rem;
  margin-right: .1rem;
}

h1,
h2,
h3 {
  font-weight: 900;
}

h4,
h5 {
  font-weight: 700;
}

h1 {
  padding: 1rem 0;
  font-size: 2rem;
  line-height: 1.5;
  letter-spacing: 2px;
}

h2 {
  padding: 1rem;
  font-size: 1.5rem;
  line-height: 1;
  background-color: hsl(277, 40%, 50%);
  color: white;
}

noscript h2 {
  padding: 0;
  line-height: 3;
  background-color: transparent;
  color: black;
}

h3 {
  font-size: 1.25rem;
  line-height: 3;
}

h4 {
  font-size: 1rem;
  line-height: 1.5;
}

a {
  color: hsl(218, 100%, 55%);
}

a:hover,
a:focus {
  color: hsl(24, 100%, 50%);
}

a:visited {
  color: hsl(277, 85%, 60%);
}

/* Navigation */

.navbar {
  padding: 0;
}

.brand {
  min-height: 3rem;
}

.navbar-desktop {
  display: none;
  visibility: hidden;
}

.navbar-mobile {
  border-bottom: .5rem solid hsl(0, 91%, 50%);
}

.navbar-brand {
  font-weight: 900;
  letter-spacing: 1px;
}

.navbar-brand,
.navbar-brand:hover,
.navbar-brand:focus,
.navbar-brand:visited,
.navbar-dark .navbar-nav .nav-link:focus,
.navbar-dark .navbar-nav .nav-link:hover,
.navbar-dark .navbar-nav .nav-link:visited,
.footer .footer-brand,
.footer .footer-brand:hover,
.footer .footer-brand:focus,
.footer .footer-brand:visited {
  color: white;
}

.nav-container {
  width: 100%;
  min-height: .5rem;
  background-color: hsl(0, 91%, 50%);
}

.navbar-desktop .navbar-nav {
  padding: 0 3rem;
}

.navbar-mobile .navbar-brand {
  width: 50%;
  margin: 0;
  white-space: normal;
}

.navbar-mobile .navbar-nav {
  text-align: center;
}

.navbar-dark .navbar-toggler {
  border: none;
}

.navbar-dark .navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 1.0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

.nav-item {
  list-style: none;
}

.navbar-nav .nav-link {
  height: 3rem;
  padding: 1rem;
  line-height: 1;
  font-size: 1rem;
  font-weight: 900;
  letter-spacing: 1px;
}

.navbar-dark .navbar-nav .nav-link,
.navbar-dark .navbar-nav .nav-item:hover .nav-link {
  color: white;
}

.nav-link:hover {
  background-color: hsl(50, 100%, 50%);
}

.navbar-dark .navbar-nav .nav-link:hover,
.nav-pills .nav-link.active,
.nav-pills .nav-link.active:hover {
  letter-spacing: 1px;
  text-shadow:
    /* base */
    -1px -1px 1px black,
    0px 0px 1px black,
    1px 1px 1px black,

    /* right offset */
    1px -1px 1px black,
    2px 0px 1px black,
    3px 1px 1px black,

    /* bottom offset */
    -1px 1px 1px black,
    0px 2px 1px black,
    1px 3px 1px black,

    /* round out the corners */
    3px 3px 1px black;
}

@media (min-width: 576px) {

}

@media (min-width: 768px) {
  .brand {
    height: 5rem;
  }

  .navbar-desktop {
    display: block;
    visibility: visible;
  }

  .navbar-mobile {
    display: none !important;
    visibility: hidden;
  }

  .navbar-nav {
    flex-direction: row;
  }

  .navbar-brand {
    font-size: 2rem;
  }
}

@media (min-width: 992px) {}

@media (min-width: 1200px) {}

/* Page Content */

#main {
  background-color: white;
  min-height: 10rem;
}

.ssbu-module {
  padding-bottom: 1rem;
}

.page-title {
  color: white;
  text-shadow:
    /* base */
    -2px -2px 0px black,
    -1px -1px 1px black,
    0px 0px 1px black,
    1px 1px 1px black,
    2px 2px 1px black,
    3px 3px 0px black,

    /* right offset */
    0px -2px 0px black,
    1px -1px 1px black,
    2px 0px 1px black,
    3px 1px 1px black,
    4px 2px 0px black,

    /* right offset - correction */
    1px -2px 0px black,
    2px -1px 1px black,
    3px 0px 1px black,
    4px 1px 1px black,
    5px 2px 0px black,

    /* bottom offset */
    -2px 0px 0px black,
    -1px 1px 1px black,
    0px 2px 1px black,
    1px 3px 1px black,
    2px 4px 0px black,

    /* round out the corners */
    -2px -1px 1px black,
    5px 4px 0px black
}

/* Content */

/* Content - Alerts */
.alert {
  margin-top: 1rem;
  margin-bottom: 0;
}

/* Content - Navs */
.row.nav-pills {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.row.nav-pills .nav-item {
  margin-bottom: 1rem;
}

.nav-pills .nav-link {
  min-height: 2.5rem;
  padding: .75rem;
  border-radius: 6px;
  line-height: 1;
  font-weight: 900;
  background-color: hsl(196, 12%, 75%);
  color: hsl(196, 12%, 45%);
  cursor: pointer;
}
/* ... */

